<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_score_title"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvTeam1Names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team 1"
        android:layout_marginTop="@dimen/margin_medium"
        android:textSize="@dimen/text_size_body"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTeam1Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_1_score"
        android:layout_marginTop="@dimen/margin_small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTeam1Score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTeam2Names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team 2"
        android:layout_marginTop="@dimen/margin_medium"
        android:textSize="@dimen/text_size_body"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTeam2Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_2_score"
        android:layout_marginTop="@dimen/margin_small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTeam2Score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_medium">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_marginEnd="@dimen/margin_small"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save_score"
            android:layout_marginStart="@dimen/margin_small"/>
    </LinearLayout>

</LinearLayout>

