<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_input_title"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- For Anonymous Players -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPlayerCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_player_count"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlayerCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- For Named Players -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_player_name"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAddPlayer"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_small"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_player"
        app:layout_constraintTop_toTopOf="@id/tilPlayerName"
        app:layout_constraintBottom_toBottomOf="@id/tilPlayerName"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvPlayersAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players_added"
        android:textSize="@dimen/text_size_body"
        app:layout_constraintTop_toBottomOf="@id/tilPlayerName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlayers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvPlayersAdded"
        app:layout_constraintBottom_toTopOf="@id/btnStartTournament"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_medium"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartTournament"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_tournament"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

