<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRoundTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/round_title"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:padding="@dimen/margin_medium"
            android:gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMatches"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/margin_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_medium"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNextRound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_next_round"
                android:layout_marginEnd="@dimen/margin_small"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEndTournament"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_end_tournament"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_marginStart="@dimen/margin_small"/>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

